--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 on:
+  workflow_dispatch:
   pull_request:
   # Run on all pull requests.
 
@@ -7,9 +8,9 @@ on:
     branches:
       - main
 
-  schedule:
-    # Run nightly, at midnight.
-    - cron: '8 0 * * *'
+  # schedule:
+  #   # Run nightly, at midnight.
+  #   - cron: '8 0 * * *'
 
 name: draco-ci
 
